k8s/postgres-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-nodeport
  namespace: stock-data-fetchers
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 31432
