k8s/stock-data-calculator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-data-calculator-service
  namespace: stock-data-fetchers
  labels:
    app: stock-data-calculator
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: stock-data-calculator
